--- a/CucumberSeleniumE2E/test-output/logger/dashboard.html
+++ b/CucumberSeleniumE2E/test-output/logger/dashboard.html
@@ -82,7 +82,7 @@
 							<div class="navbar-text nav-title flex" id="pageTitle">Dashboard</div>
 							<ul class="nav nav-xs flex-row no-border pull-right">
 <li><a href="#" class="b-l"><span class="badge badge-pull">ExtentReports</span></a></li>
-<li><a href="#" class="b-l"><span class="badge badge-pull">Jun 30, 2020 01:39:01 PM</span></a></li>
+<li><a href="#" class="b-l"><span class="badge badge-pull">Jul 1, 2020 02:00:43 PM</span></a></li>
 <li><a href="#" class="b-l"><span class="badge badge-pull">4.0</span></a></li>
 							</ul>
 						</div>
@@ -99,8 +99,8 @@
 						1
 					</div>
 					<div class="d-flex">
-						<span class="flex text-muted">Out of which 1 passed</span>
-						<span><i class="fa fa-circle-o text-success"></i> 100.00%</span>
+						<span class="flex text-muted">Out of which 0 passed</span>
+						<span><i class="fa fa-circle-o text-success"></i> .00%</span>
 					</div>
 				</div>
 			</div>
@@ -110,11 +110,11 @@
 						<span class="">Scenarios</span>
 					</div>
 					<div class="py-3 text-center text-md text-primary">
-						1
+						4
 					</div>
 					<div class="d-flex">
 						<span class="flex text-muted">Out of which 1 passed</span>
-						<span><i class="fa fa-circle-o text-primary"></i> 100.00%</span>
+						<span><i class="fa fa-circle-o text-primary"></i> 25.00%</span>
 					</div>
 				</div>
 			</div>
@@ -124,7 +124,7 @@
 						<span class="">Start</span>
 					</div>
 					<div class="py-3 text-center text-md">
-						Jun 30, 2020 01:39:01 PM
+						Jul 1, 2020 02:00:43 PM
 					</div>
 					<div class="d-flex">
 						<span class="flex"></span>
@@ -138,7 +138,7 @@
 						<span class="">Time Taken</span>
 					</div>
 					<div class="py-3 text-center text-md">
-						0h 0m 27s+53ms
+						0h 1m 43s+238ms
 					</div>
 					<div class="d-flex">
 						<span class="flex"></span>
@@ -162,14 +162,14 @@
 							<div class="col-lg-5">
 								<div class="list">
 									<div class="list-item">
-										<div><i class="badge badge-xs badge-o b-info"></i> &nbsp;Pass 100.00%</div>
+										<div><i class="badge badge-xs badge-o b-warning"></i> &nbsp;Skip 100.00%</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="box-footer">
-						<small class="text-muted">1 passed, 0 failed and 0 skipped</small>
+						<small class="text-muted">0 passed, 0 failed and 1 skipped</small>
 					</div>
 				</div>
 			</div>
@@ -187,14 +187,14 @@
 							<div class="col-lg-5">
 								<div class="list">
 									<div class="list-item">
-										<div><i class="badge badge-xs badge-o b-info"></i> &nbsp;Pass 100.00%</div>
+										<div><i class="badge badge-xs badge-o b-warning"></i> &nbsp;Skip 75.00%</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="box-footer">
-						<small class="text-muted">1 passed, 0 failed and 0 skipped</small>
+						<small class="text-muted">1 passed, 0 failed and 3 skipped</small>
 					</div>
 				</div>
 			</div>
@@ -212,15 +212,15 @@
 							<div class="col-lg-5">
 								<div class="list">
 									<div class="list-item">
-										<div><i class="badge badge-xs badge-o b-info"></i> 100%</div>
-										<div class="list-body"><span class="text-muted">Passed</span></div>
+										<div><i class="badge badge-xs badge-o b-warning"></i> 75%</div>
+										<div class="list-body"><span class="text-muted">Skipped</span></div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="box-footer">
-						<small class="text-muted">10 passed, 0 failed and 0 skipped</small>
+						<small class="text-muted">41 passed, 0 failed and 9 skipped</small>
 					</div>
 				</div>
 			</div>
@@ -252,18 +252,30 @@
 						</tr>
 						<tr>
 							<td>@ui</td>
-							<td>2</td>
+							<td>1</td>
 							<td>0</td>
 							<td>0</td>
 						</tr>
 						<tr>
-							<td>@search</td>
-							<td>2</td>
+							<td>@AddToCart</td>
+							<td>1</td>
 							<td>0</td>
 							<td>0</td>
 						</tr>
 						<tr>
-							<td>@TC0008</td>
+							<td>@TC0036</td>
+							<td>0</td>
+							<td>0</td>
+							<td>0</td>
+						</tr>
+						<tr>
+							<td>@TC0032</td>
+							<td>0</td>
+							<td>0</td>
+							<td>0</td>
+						</tr>
+						<tr>
+							<td>@TC0038</td>
 							<td>1</td>
 							<td>0</td>
 							<td>0</td>
@@ -291,7 +303,7 @@
 		                datasets: [{
 		                    borderColor: 'transparent',
 		                    data: [
-		                    	1, 0, 0, 0, 0, 0
+		                    	0, 0, 0, 0, 0, 1
 		                    ],
 		                    backgroundColor: [
 		                        "#00af00", "#F7464A", "#8b0000", "#ff6347", "#FDB45C", "#1e90ff"
@@ -325,7 +337,7 @@
 			                datasets: [{
 			                    borderColor: 'transparent',
 			                    data: [
-			                    	1, 0, 0, 0, 0, 0
+			                    	1, 0, 0, 0, 0, 3
 			                    ],
 			                    backgroundColor: [
 			                        "#00af00", "#F7464A", "#8b0000", "#ff6347", "#FDB45C", "#1e90ff"
@@ -360,7 +372,7 @@
 			                datasets: [{
 			                    borderColor: 'transparent',
 			                    data: [
-			                    	10, 0, 0, 0, 0, 0
+			                    	41, 0, 0, 0, 0, 9
 			                    ],
 			                    backgroundColor: [
 			                        "#00af00", "#F7464A", "#8b0000", "#ff6347", "#FDB45C", "#1e90ff"
@@ -388,7 +400,7 @@
 		})();
 	})
     var timeline = {
-"Search functionality":26.614    };
+"Add to cart functionality":102.331    };
     function getRandomColor() {
         var letters = '0123456789ABCDEF';
         var color = '#';
