--- a/CucumberSeleniumE2E/test-output/logger/tag.html
+++ b/CucumberSeleniumE2E/test-output/logger/tag.html
@@ -101,14 +101,14 @@
 						<div class="list-body">
 							<a href="#" class="item-title _500">@ui</a>
 							<div class="item-except text-sm text-muted h-1x">
-								2 tests
+								5 tests
 							</div>
 							<div class="tc d-none">
 								<h5>@ui</h5>
 								<div class="mb-4">
-									<span class="badge pass text-pass">2 passed</span>
+									<span class="badge pass text-pass">1 passed</span>
 									<span class="badge pass text-fail">0 failed</span>
-									<span class="badge pass text-skip">0 skipped</span>
+									<span class="badge pass text-skip">4 skipped</span>
 								</div>
 								<table class="table">
 									<thead><tr>
@@ -121,28 +121,89 @@
 									</tr></thead>
 									<tbody>
 	
-<tr class="s-pass" test-id="1" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Search functionality </td>
-	<td>0h 0m 26s+614msc</td>
+<tr class="s-skip" test-id="1" parent-id="1">
+	<td><span class="w-32 avatar circle skip"><span class="badge">skip</span></span></td>
+	<td class="_600">Add to cart functionality </td>
+	<td>0h 1m 42s+331msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @ui</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @search</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @AddToCart</span>
 		</span>
 </td>
 	<td>
 	</td>
 	<td class="static"><i class="static fa fa-external-link"></i></td>
 </tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
+</tr>
 	
-<tr class="s-pass" test-id="2" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">A User Should be Able to click on a product link from the search page and product description page should be displayed. <br/><span class="text-muted text-sm">Search functionality</span></td>
-	<td>0h 0m 26s+614msc</td>
+<tr class="s-skip" test-id="2" parent-id="1">
+	<td><span class="w-32 avatar circle skip"><span class="badge">skip</span></span></td>
+	<td class="_600">Add A Product To Cart and Validate cart window with product added <br/><span class="text-muted text-sm">Add to cart functionality</span></td>
+	<td>0h 0m 36s+64msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @ui</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @search</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @TC0008</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @AddToCart</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @TC0036</span>
+		</span>
+</td>
+	<td>
+	</td>
+	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
+</tr>
+	
+<tr class="s-skip" test-id="16" parent-id="1">
+	<td><span class="w-32 avatar circle skip"><span class="badge">skip</span></span></td>
+	<td class="_600">User should be able to Remove the items from Add To Cart list <br/><span class="text-muted text-sm">User should be able to Remove the items from Add To Cart list</span></td>
+	<td>0h 0m 18s+336msc</td>
+	<td>		<span class="category-list attr-x">
+		<span class="category badge"><i class="fa fa-tag"></i> @ui</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @AddToCart</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @TC0032</span>
+		</span>
+</td>
+	<td>
+	</td>
+	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
+</tr>
+	
+<tr class="s-skip" test-id="29" parent-id="1">
+	<td><span class="w-32 avatar circle skip"><span class="badge">skip</span></span></td>
+	<td class="_600">User should be able to Remove the items from Add To Cart list <br/><span class="text-muted text-sm">User should be able to Remove the items from Add To Cart list</span></td>
+	<td>0h 0m 17s+369msc</td>
+	<td>		<span class="category-list attr-x">
+		<span class="category badge"><i class="fa fa-tag"></i> @ui</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @AddToCart</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @TC0032</span>
+		</span>
+</td>
+	<td>
+	</td>
+	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
+</tr>
+	
+<tr class="s-pass" test-id="42" parent-id="1">
+	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+	<td class="_600">Validate the cart value in the header section is updated after adding product <br/><span class="text-muted text-sm">Add to cart functionality</span></td>
+	<td>0h 0m 30s+478msc</td>
+	<td>		<span class="category-list attr-x">
+		<span class="category badge"><i class="fa fa-tag"></i> @ui</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @AddToCart</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @TC0038</span>
 		</span>
 </td>
 	<td>
@@ -155,22 +216,22 @@
 						</div>
 						<div>
 							<span class="item-meta text-xs lt">
-							<span class="badge pass text-pass">2</span> <span class="badge fail text-fail">0</span> <span class="badge skip text-skip">0</span>
+							<span class="badge pass text-pass">1</span> <span class="badge fail text-fail">0</span> <span class="badge skip text-skip">4</span>
 							</span>
 						</div>
 					</div>
 					<div class="list-item attr">
 						<div class="list-body">
-							<a href="#" class="item-title _500">@search</a>
+							<a href="#" class="item-title _500">@AddToCart</a>
 							<div class="item-except text-sm text-muted h-1x">
-								2 tests
+								5 tests
 							</div>
 							<div class="tc d-none">
-								<h5>@search</h5>
+								<h5>@AddToCart</h5>
 								<div class="mb-4">
-									<span class="badge pass text-pass">2 passed</span>
+									<span class="badge pass text-pass">1 passed</span>
 									<span class="badge pass text-fail">0 failed</span>
-									<span class="badge pass text-skip">0 skipped</span>
+									<span class="badge pass text-skip">4 skipped</span>
 								</div>
 								<table class="table">
 									<thead><tr>
@@ -183,28 +244,89 @@
 									</tr></thead>
 									<tbody>
 	
-<tr class="s-pass" test-id="1" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">Search functionality </td>
-	<td>0h 0m 26s+614msc</td>
+<tr class="s-skip" test-id="1" parent-id="1">
+	<td><span class="w-32 avatar circle skip"><span class="badge">skip</span></span></td>
+	<td class="_600">Add to cart functionality </td>
+	<td>0h 1m 42s+331msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @ui</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @search</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @AddToCart</span>
 		</span>
 </td>
 	<td>
 	</td>
 	<td class="static"><i class="static fa fa-external-link"></i></td>
 </tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
+</tr>
 	
-<tr class="s-pass" test-id="2" parent-id="1">
-	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">A User Should be Able to click on a product link from the search page and product description page should be displayed. <br/><span class="text-muted text-sm">Search functionality</span></td>
-	<td>0h 0m 26s+614msc</td>
+<tr class="s-skip" test-id="2" parent-id="1">
+	<td><span class="w-32 avatar circle skip"><span class="badge">skip</span></span></td>
+	<td class="_600">Add A Product To Cart and Validate cart window with product added <br/><span class="text-muted text-sm">Add to cart functionality</span></td>
+	<td>0h 0m 36s+64msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @ui</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @search</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @TC0008</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @AddToCart</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @TC0036</span>
+		</span>
+</td>
+	<td>
+	</td>
+	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
+</tr>
+	
+<tr class="s-skip" test-id="16" parent-id="1">
+	<td><span class="w-32 avatar circle skip"><span class="badge">skip</span></span></td>
+	<td class="_600">User should be able to Remove the items from Add To Cart list <br/><span class="text-muted text-sm">User should be able to Remove the items from Add To Cart list</span></td>
+	<td>0h 0m 18s+336msc</td>
+	<td>		<span class="category-list attr-x">
+		<span class="category badge"><i class="fa fa-tag"></i> @ui</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @AddToCart</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @TC0032</span>
+		</span>
+</td>
+	<td>
+	</td>
+	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
+</tr>
+	
+<tr class="s-skip" test-id="29" parent-id="1">
+	<td><span class="w-32 avatar circle skip"><span class="badge">skip</span></span></td>
+	<td class="_600">User should be able to Remove the items from Add To Cart list <br/><span class="text-muted text-sm">User should be able to Remove the items from Add To Cart list</span></td>
+	<td>0h 0m 17s+369msc</td>
+	<td>		<span class="category-list attr-x">
+		<span class="category badge"><i class="fa fa-tag"></i> @ui</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @AddToCart</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @TC0032</span>
+		</span>
+</td>
+	<td>
+	</td>
+	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
+</tr>
+	
+<tr class="s-pass" test-id="42" parent-id="1">
+	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
+	<td class="_600">Validate the cart value in the header section is updated after adding product <br/><span class="text-muted text-sm">Add to cart functionality</span></td>
+	<td>0h 0m 30s+478msc</td>
+	<td>		<span class="category-list attr-x">
+		<span class="category badge"><i class="fa fa-tag"></i> @ui</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @AddToCart</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @TC0038</span>
 		</span>
 </td>
 	<td>
@@ -217,18 +339,158 @@
 						</div>
 						<div>
 							<span class="item-meta text-xs lt">
-							<span class="badge pass text-pass">2</span> <span class="badge fail text-fail">0</span> <span class="badge skip text-skip">0</span>
+							<span class="badge pass text-pass">1</span> <span class="badge fail text-fail">0</span> <span class="badge skip text-skip">4</span>
 							</span>
 						</div>
 					</div>
 					<div class="list-item attr">
 						<div class="list-body">
-							<a href="#" class="item-title _500">@TC0008</a>
+							<a href="#" class="item-title _500">@TC0036</a>
 							<div class="item-except text-sm text-muted h-1x">
 								1 tests
 							</div>
 							<div class="tc d-none">
-								<h5>@TC0008</h5>
+								<h5>@TC0036</h5>
+								<div class="mb-4">
+									<span class="badge pass text-pass">0 passed</span>
+									<span class="badge pass text-fail">0 failed</span>
+									<span class="badge pass text-skip">1 skipped</span>
+								</div>
+								<table class="table">
+									<thead><tr>
+										<th id="status-col"></th>
+										<th>Test</th>
+										<th>Duration</th>
+										<th>Attributes</th>
+										<th>Media</th>
+										<th>Source</th>
+									</tr></thead>
+									<tbody>
+	
+<tr class="s-skip" test-id="2" parent-id="1">
+	<td><span class="w-32 avatar circle skip"><span class="badge">skip</span></span></td>
+	<td class="_600">Add A Product To Cart and Validate cart window with product added <br/><span class="text-muted text-sm">Add to cart functionality</span></td>
+	<td>0h 0m 36s+64msc</td>
+	<td>		<span class="category-list attr-x">
+		<span class="category badge"><i class="fa fa-tag"></i> @ui</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @AddToCart</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @TC0036</span>
+		</span>
+</td>
+	<td>
+	</td>
+	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
+</tr>
+									</tbody>
+								</table>
+							</div>
+						</div>
+						<div>
+							<span class="item-meta text-xs lt">
+							<span class="badge pass text-pass">0</span> <span class="badge fail text-fail">0</span> <span class="badge skip text-skip">1</span>
+							</span>
+						</div>
+					</div>
+					<div class="list-item attr">
+						<div class="list-body">
+							<a href="#" class="item-title _500">@TC0032</a>
+							<div class="item-except text-sm text-muted h-1x">
+								3 tests
+							</div>
+							<div class="tc d-none">
+								<h5>@TC0032</h5>
+								<div class="mb-4">
+									<span class="badge pass text-pass">0 passed</span>
+									<span class="badge pass text-fail">0 failed</span>
+									<span class="badge pass text-skip">3 skipped</span>
+								</div>
+								<table class="table">
+									<thead><tr>
+										<th id="status-col"></th>
+										<th>Test</th>
+										<th>Duration</th>
+										<th>Attributes</th>
+										<th>Media</th>
+										<th>Source</th>
+									</tr></thead>
+									<tbody>
+	
+<tr class="s-skip" test-id="15" parent-id="1">
+	<td><span class="w-32 avatar circle skip"><span class="badge">skip</span></span></td>
+	<td class="_600">User should be able to Remove the items from Add To Cart list <br/><span class="text-muted text-sm">Add to cart functionality</span></td>
+	<td>0h 0m 35s+714msc</td>
+	<td>		<span class="category-list attr-x">
+		<span class="category badge"><i class="fa fa-tag"></i> @TC0032</span>
+		</span>
+</td>
+	<td>
+	</td>
+	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
+</tr>
+	
+<tr class="s-skip" test-id="16" parent-id="1">
+	<td><span class="w-32 avatar circle skip"><span class="badge">skip</span></span></td>
+	<td class="_600">User should be able to Remove the items from Add To Cart list <br/><span class="text-muted text-sm">User should be able to Remove the items from Add To Cart list</span></td>
+	<td>0h 0m 18s+336msc</td>
+	<td>		<span class="category-list attr-x">
+		<span class="category badge"><i class="fa fa-tag"></i> @ui</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @AddToCart</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @TC0032</span>
+		</span>
+</td>
+	<td>
+	</td>
+	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
+</tr>
+	
+<tr class="s-skip" test-id="29" parent-id="1">
+	<td><span class="w-32 avatar circle skip"><span class="badge">skip</span></span></td>
+	<td class="_600">User should be able to Remove the items from Add To Cart list <br/><span class="text-muted text-sm">User should be able to Remove the items from Add To Cart list</span></td>
+	<td>0h 0m 17s+369msc</td>
+	<td>		<span class="category-list attr-x">
+		<span class="category badge"><i class="fa fa-tag"></i> @ui</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @AddToCart</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @TC0032</span>
+		</span>
+</td>
+	<td>
+	</td>
+	<td class="static"><i class="static fa fa-external-link"></i></td>
+</tr>
+<tr class="details">
+	<td colspan="5">
+	</td>
+</tr>
+									</tbody>
+								</table>
+							</div>
+						</div>
+						<div>
+							<span class="item-meta text-xs lt">
+							<span class="badge pass text-pass">0</span> <span class="badge fail text-fail">0</span> <span class="badge skip text-skip">3</span>
+							</span>
+						</div>
+					</div>
+					<div class="list-item attr">
+						<div class="list-body">
+							<a href="#" class="item-title _500">@TC0038</a>
+							<div class="item-except text-sm text-muted h-1x">
+								1 tests
+							</div>
+							<div class="tc d-none">
+								<h5>@TC0038</h5>
 								<div class="mb-4">
 									<span class="badge pass text-pass">1 passed</span>
 									<span class="badge pass text-fail">0 failed</span>
@@ -245,14 +507,14 @@
 									</tr></thead>
 									<tbody>
 	
-<tr class="s-pass" test-id="2" parent-id="1">
+<tr class="s-pass" test-id="42" parent-id="1">
 	<td><span class="w-32 avatar circle pass"><span class="badge">pass</span></span></td>
-	<td class="_600">A User Should be Able to click on a product link from the search page and product description page should be displayed. <br/><span class="text-muted text-sm">Search functionality</span></td>
-	<td>0h 0m 26s+614msc</td>
+	<td class="_600">Validate the cart value in the header section is updated after adding product <br/><span class="text-muted text-sm">Add to cart functionality</span></td>
+	<td>0h 0m 30s+478msc</td>
 	<td>		<span class="category-list attr-x">
 		<span class="category badge"><i class="fa fa-tag"></i> @ui</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @search</span>
-		<span class="category badge"><i class="fa fa-tag"></i> @TC0008</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @AddToCart</span>
+		<span class="category badge"><i class="fa fa-tag"></i> @TC0038</span>
 		</span>
 </td>
 	<td>
@@ -296,7 +558,7 @@
 									        </a>
 								        </li>
 <li><a href="#" class="b-l"><span class="badge badge-pull">ExtentReports</span></a></li>
-<li><a href="#" class="b-l"><span class="badge badge-pull">Jun 30, 2020 01:39:01 PM</span></a></li>
+<li><a href="#" class="b-l"><span class="badge badge-pull">Jul 1, 2020 02:00:43 PM</span></a></li>
 <li><a href="#" class="b-l"><span class="badge badge-pull">4.0</span></a></li>
 								    </ul>
 								</div>
